Fixed bug causing cells to overflow grid

--- a/style.css
+++ b/style.css
@@ -3,13 +3,22 @@ body{
     justify-content: center;
     margin: 0;
     padding: 0;
-    background-color: lightgray;
+    background-color: lightcoral;
 }
 .left{
     flex: 1 0 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.buttonContainer{
+    flex: 0 0 auto;
     display: flex;
     flex-direction: column;
-    background-color: red;
+    height: 80vh;
+    width: 50%;
+    justify-content: center;
 }
 button{
     height: 20vh;
@@ -18,15 +27,14 @@ button{
 .gridContainer{
     height: 100vh;
     width: 100vh;
-    background-color: lightcoral;
     display: flex;
     flex: 0 0 auto;
     justify-content: center;
     align-items: center;
 }
 .grid{
-    height: 80vh;
-    width: 80vh;
+    height: 80%;
+    width: 80%;
     flex: 0 0 auto;
     display:flex;
     flex-wrap: wrap;
@@ -35,10 +43,4 @@ button{
 .cell{
     flex: 0 0 auto;
     background-color: white;
-}
-.right{
-    flex: 1 0 0;
-    display: flex;
-    flex-direction: column;
-    background-color: red;
 }
